add app module to project
app module just does the startup shuffle for the other modules